--- a/Career-Page-react/index.html
+++ b/Career-Page-react/index.html
@@ -7,9 +7,11 @@
     <title>Job Finder</title>
     <link rel="stylesheet" href="/src/index.css" />
     <link rel="stylesheet" href="/node_modules/@fortawesome/fontawesome-free/css/all.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
